--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,7 @@
     <link href="/assets/css/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="/assets/css/tatami.css" rel="stylesheet">
     <link href="/assets/bower_components/ngtoast/dist/ngToast.css" rel="stylesheet">
+    <link href="/assets/bower_components/ment.io/ment.io/styles.css" rel="stylesheet">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1.0">
