--- a/src/main/webapp/app/shared/topMenu/SearchView.html
+++ b/src/main/webapp/app/shared/topMenu/SearchView.html
@@ -1,101 +1,20 @@
-<!--
 <a>
-    <div ng-if="match.model.firstGroup">Groups</div>
-    <div ng-if="match.model.groupId">
-        {{match.model.name}}
+    <div class="category groups" ng-if="match.model.groupId">
+        <span class="glyphicon glyphicon-th-large">
+            {{ match.model.name }}
+        </span>
     </div>
-    <div ng-if="match.model.firstUser">Users</div>
-    <div ng-if="match.model.login">
-        @{{match.model.username}}
-    </div>
-    <div ng-if="match.model.firstTag">Tags</div>
-    <div ng-if="!match.model.groupId && match.model.name">
-        #{{match.model.name}}
-    </div>
-</a>
--->
-<!--
-<div style="cursor: default;
-    height: auto;
-    background: #EDEDED;
-    padding: 6px 5px 5px 13px;
-    width:30px;
-    padding: 3px 10px;"  ng-if="match.model.firstGroup" class="category tags" class="icon-tags">
-    <span class="glyphicon glyphicon-tags"></span>
-</div>
-<div style="cursor: default;
-    height: auto;
-    background: #EDEDED;
-    padding: 6px 5px 5px 13px;
-    width:30px;
-    padding: 3px 10px;" ng-if="match.model.firstUser" class="icon-user">
-    <span class="glyphicon glyphicon-user"></span>
-</div>
-<div style="cursor: default;
-    height: auto;
-    background: #EDEDED;
-    padding: 6px 5px 5px 13px;
-    width:30px;
-    padding: 3px 10px;" ng-if="match.model.firstTag" class="icon-th-large">
-    <span class="glyphicon glyphicon-th-large"></span>
-</div>
-<a>
-    <div>
-        <span style="cursor: default;
-              height: auto;
-              background: #EDEDED;
-              padding: 6px 5px 5px 13px;
-              width:30px;
-              padding: 3px 10px;" ng-if="match.model.firstGroup" class="glyphicon glyphicon-tags">
+    <div class="category users" ng-if="match.model.login">
+        <span class="glyphicon glyphicon-user">
 
         </span>
-        <span ng-if="match.model.groupId">
-            {{match.model.name}}
-        </span>
-    </div>
-    <div>
-        <div ng-if="match.model.login">
+        <span>
             @{{match.model.username}}
-        </div>
-        <div ng-if="!match.model.groupId && match.model.name">
+        </span>
+    </div>
+    <div class="category tags" ng-if="!match.model.groupId && match.model.name">
+        <span class="glyphicon glyphicon-tags background-color:">
             #{{match.model.name}}
-        </div>
+        </span>
     </div>
 </a>
--->
-
-
-<div>
-<table class="">
-    <tr>
-
-        <td class="category tags" class="icon-user" ng-if="match.model.login">
-        </td>
-        <td style="cursor: default;
-              height: auto;
-              background: #EDEDED;
-              padding: 6px 5px 5px 13px;
-              width:30px;
-              padding: 3px 10px;" class="glyphicon glyphicon-th-large" ng-if="match.model.groupId">
-        </td>
-        <td style="cursor: default;
-              height: auto;
-              background: #EDEDED;
-              padding: 6px 5px 5px 13px;
-              width:30px;
-              padding: 3px 10px;" class="glyphicon glyphicon-tags" ng-if="!match.model.groupId && match.model.name">
-        </td>
-        <td>
-            <div ng-if="match.model.groupId">
-                <a>{{match.model.name | typeaheadHighlight}}</a>
-            </div>
-            <div ng-if="match.model.login">
-                <a>@{{match.model.username}}</a>
-            </div>
-            <div ng-if="!match.model.groupId && match.model.name">
-                <a>#{{match.model.name}}</a>
-            </div>
-        </td>
-    </tr>
-</table>
-</div>
