Users can search by selecting from a dropdown menu, or they can type in a search string and hit enter. If they do the latter, they will be redirected to a page with all statuses containing the search term

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -143,6 +143,9 @@
     <!-- Tag View -->
     <script src="/app/components/home/tag/TagHeaderController.js"></script>
 
+    <!-- Search View -->
+    <script src="/app/components/home/search/SearchHeaderController.js"></script>
+
     <!-- Group View -->
     <script src="/app/components/home/group/GroupHeaderController.js"></script>
 
