--- a/src/main/webapp/app/shared/lists/status/withContext/StatusListContextView.html
+++ b/src/main/webapp/app/shared/lists/status/withContext/StatusListContextView.html
@@ -1,7 +1,6 @@
 <section class="tatams-container">
-    <section class="timeline">
-    <!--<section class="timeline" infinite-scroll="loadMore()" infinite-scroll-disabled="busy">-->
-        <div class="tatams" ng-repeat="statusBlock in statuses">
+    <section class="timeline" infinite-scroll="loadMore()" infinite-scroll-disabled="busy">
+        <div class="tatams" ng-repeat="statusBlock in statusesWithContext">
             <div class="tatam pointer tatam-border-lr tatam-hover" style="display: block;">
                 <div id="current" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false">
                     
