Timeline anchor depress bug
Now occurs less frequently… which is desirable.

--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -20,7 +20,7 @@
                 <a ui-sref="tatami.home.home.timeline">
                     <span>
                         <span class="glyphicon glyphicon-th-list"></span>
-                        <span translate="tatami.home.timeline" class="hidden-tablet"></span>
+                        <span translate="tatami.home.timeline"  onclick="document.activeElement.focus(); document.activeElement.blur();" class="hidden-tablet"></span>
                     </span>
                 </a>
             </li>
