--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -75,6 +75,7 @@
 
 
     <script src="/assets/bower_components/angular/angular.js"></script>
+    <script src="/assets/bower_components/angular-touch/angular-touch.js"></script>
 
     <script src="/assets/bower_components/angular-resource/angular-resource.js"></script>
     <script src="/assets/bower_components/angular-sanitize/angular-sanitize.js"></script>
