added shares drop down for status views without context

--- a/src/main/webapp/app/shared/lists/status/withoutContext/StatusListView.html
+++ b/src/main/webapp/app/shared/lists/status/withoutContext/StatusListView.html
@@ -10,7 +10,7 @@
                                 <div class="img img-rounded img-medium" ng-style="{ 'background-image': 'url(' + status.avatarURL + ')' }"></div>
                             </a>
                         </div>
-                        <div class="status-content-container">
+                        <div class="status-content-container" ng-init="expanded = false" ng-click="getShares(status, $index); expanded = !expanded">
                             <h5 class="statusitem-name">
                                 <small ng-if="status.type == 'SHARE'">
                                     <span class="glyphicon glyphicon-retweet">&nbsp;</span>
@@ -83,6 +83,18 @@
                                         </span>
                                     </div>
                                 </div>
+
+                                <div ng-show="expanded && status.shares != null && status.shares.length != 0" id="share">
+                                    <span translate="tatami.home.status.shares"></span>
+                                    <span class="badge">{{ status.shares.length }}</span>
+                                    <div>
+                                        <span ng-repeat="user in status.shares">
+                                            <a ui-sref="tatami.home.profile.statuses({ username: user.username })">
+                                                <div class="img img-rounded img-small share-img-fffix" ng-attr-title="@{{ user.username }}" ng-style="{ 'background-image': 'url(' + user.avatarURL + ')' }"></div>
+                                            </a>
+                                        </span>
+                                    </div>
+                                </div>
                             </small>
                         </div>
 
@@ -119,8 +131,6 @@
                                 </small>
                             </div>
                         </div>
-
-                        <div id="share"></div>
                     </div>
 
                 </div>
