added shares drop down for home timeline

--- a/src/main/webapp/app/shared/lists/status/withContext/StatusListContextView.html
+++ b/src/main/webapp/app/shared/lists/status/withContext/StatusListContextView.html
@@ -17,7 +17,7 @@
                                 <div class="img img-rounded img-medium" ng-style="{ 'background-image': 'url(' + statusBlock.status.avatarURL + ')' }"></div>
                             </a>
                         </div>
-                        <div class="status-content-container">
+                        <div class="status-content-container" ng-init="expanded = false" ng-click="getShares(statusBlock.status, $index, null); expanded = !expanded">
                             <h5 class="statusitem-name">
                                 <small ng-if="statusBlock.status.type == 'SHARE'">
                                     <span class="glyphicon glyphicon-retweet">&nbsp;</span>
@@ -90,6 +90,18 @@
                                         </span>
                                     </div>
                                 </div>
+
+                                <div ng-show="expanded && statusBlock.status.shares != null && statusBlock.status.shares.length != 0" id="share">
+                                    <span translate="tatami.home.status.shares"></span>
+                                    <span class="badge">{{ statusBlock.status.shares.length }}</span>
+                                    <div>
+                                        <span ng-repeat="user in statusBlock.status.shares">
+                                            <a ui-sref="tatami.home.profile.statuses({ username: user.username })">
+                                                <div class="img img-rounded img-small share-img-fffix" ng-attr-title="@{{ user.username }}" ng-style="{ 'background-image': 'url(' + user.avatarURL + ')' }"></div>
+                                            </a>
+                                        </span>
+                                    </div>
+                                </div>
                             </small>
                         </div>
 
@@ -127,8 +139,6 @@
                             </div>
                         </div>
 
-                        <div id="share"></div>
-
                         <div ng-if="statusBlock.replies">
                             <br>
                         </div>
@@ -141,7 +151,7 @@
                                     <div class="img img-rounded img-medium" ng-style="{ 'background-image': 'url(' + status.avatarURL + ')' }"></div>
                                 </a>
                             </div>
-                            <div class="status-content-container">
+                            <div class="status-content-container" ng-init="expanded = false" ng-click="getShares(status, $parent.$index, $index); expanded = !expanded">
                                 <h5 class="statusitem-name">
                                     <small ng-if="status.type == 'SHARE'">
                                         <span class="glyphicon glyphicon-retweet">&nbsp;</span>
@@ -214,6 +224,18 @@
                                             </span>
                                         </div>
                                     </div>
+
+                                    <div ng-show="expanded && status.shares != null && status.shares.length != 0" id="share">
+                                        <span translate="tatami.home.status.shares"></span>
+                                        <span class="badge">{{ status.shares.length }}</span>
+                                        <div>
+                                            <span ng-repeat="user in status.shares">
+                                                <a ui-sref="tatami.home.profile.statuses({ username: user.username })">
+                                                    <div class="img img-rounded img-small share-img-fffix" ng-attr-title="@{{ user.username }}" ng-style="{ 'background-image': 'url(' + user.avatarURL + ')' }"></div>
+                                                </a>
+                                            </span>
+                                        </div>
+                                    </div>
                                 </small>
                             </div>
 
@@ -250,8 +272,6 @@
                                     </small>
                                 </div>
                             </div>
-
-                            <div id="share"></div>
 
                             <div ng-if="$index != statusBlock.replies.length - 1">
                                 <br>
