fixed post modal not showing on mobile

--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -10,7 +10,7 @@
         <span translate="tatami.home.menu.title"></span>
     </a>
 
-    <button ng-if="$state.includes('tatami.home')" type="button" class="editTatam btn btn-primary navbar-toggle navbar-edit">
+    <button ng-if="$state.includes('tatami.home')" ui-sref="tatami.home.home.timeline.post" type="button" class="btn btn-primary navbar-toggle navbar-edit">
         <i class="close glyphicon glyphicon-pencil"></i>
     </button>
 
