added mailto for profile email

--- a/src/main/webapp/app/shared/sidebars/profile/ProfileSidebarView.html
+++ b/src/main/webapp/app/shared/sidebars/profile/ProfileSidebarView.html
@@ -37,7 +37,7 @@
                 </p>
                 <p>
                     <strong translate="tatami.home.profile.sidebar.email"></strong>:
-                    {{ user.login }}
+                    <a ng-href="mailto:{{ user.login }}">{{ user.login }}</a>
                 </p>
                 <p>
                     <strong translate="tatami.home.profile.sidebar.phoneNumber"></strong>:
