--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -20,12 +20,12 @@
                 <a ui-sref="tatami.home.home.timeline">
                     <span>
                         <span class="glyphicon glyphicon-th-list"></span>
-                        <span translate="tatami.home.timeline"  onclick="document.activeElement.focus(); document.activeElement.blur();" class="hidden-tablet"></span>
+                        <span translate="tatami.home.timeline" class="hidden-tablet"></span>
                     </span>
                 </a>
             </li>
-            <li class="dropdown pointer" dropdown>
-                <a class="dropdown-toggle" data-toggle="dropdown" dropdown-toggle>
+            <li class="dropdown pointer">
+                <a class="dropdown-toggle" data-toggle="dropdown">
                 <span>
                     <span class="glyphicon glyphicon-info-sign"></span>
                     <span translate="tatami.home.menu.about.title" class="hidden-tablet"></span>
@@ -112,8 +112,8 @@
 
         <div ng-if="$state.includes('tatami.home')">
             <ul class="nav pull-right">
-                <li class="dropdown pointer" dropdown>
-                    <a class="dropdown-toggle" data-toggle="dropdown" dropdown-toggle>
+                <li class="dropdown pointer">
+                    <a class="dropdown-toggle" data-toggle="dropdown">
                     <span>
                         <span class="glyphicon glyphicon-user"></span>
                         <span translate="tatami.home.menu.account.title" class="hidden-tablet"></span>
