removed unused controller

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -163,11 +163,8 @@
     <script src="/app/components/home/status/StatusController.js"></script>
 
     <!-- List Views -->
-    <script src="/app/components/home/timeline/TimelineHeaderController.js"></script>
-
-    <script src="/app/shared/lists/status/withContext/StatusListContextController.js"></script>
+    <!--<script src="/app/shared/lists/status/withContext/StatusListContextController.js"></script>-->
     <script src="/app/shared/lists/status/withoutContext/StatusListController.js"></script>
-
     <script src="/app/shared/lists/user/UserListController.js"></script>
 
     <!-- Post New Status Modal -->
