--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -4,13 +4,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
     </button>
+
     <!-- Change ui-sref that goes to root state -->
     <a class="navbar-brand" ui-sref="tatami.home.home.timeline">
         <img title="{{ 'tatami.home.menu.logo' | translate }}" src="/assets/img/company-logo.png">
         <span translate="tatami.home.menu.title"></span>
     </a>
 
-    <button ng-if="$state.includes('tatami.home')" ui-sref="tatami.home.home.timeline.post" type="button" class="btn btn-primary navbar-toggle navbar-edit">
+    <button ng-if="$state.includes('tatami.home')" ng-click="openPostModal()" type="button" class="btn btn-primary navbar-toggle navbar-edit">
         <i class="close glyphicon glyphicon-pencil"></i>
     </button>
 
@@ -194,7 +195,7 @@
                             skip="false"
                             on-end="onTourEnd(tour)"
                             class="btn btn-primary navbar-form"
-                            ui-sref="tatami.home.home.timeline.post">
+                            ng-click="openPostModal()">
                         <i class="glyphicon glyphicon-pencil"></i>
                         <span translate="tatami.home.post.button" class="visible-desktop"></span>
                     </button>
