--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -92,7 +92,7 @@
 
     <script src="/assets/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="/assets/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="/assets/bower_components/ment.io/dist/mentio.min.js"></script>
+    <script src="/assets/bower_components/ment.io/dist/mentio.js"></script>
 
     <script src="/assets/bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="/assets/bower_components/ngtoast/dist/ngToast.min.js"></script>
