polling is buggy, replaced with refresh button for now
The refresh button is available across all StatusListViews, unlike
polling which was only on the home timeline.

--- a/src/main/webapp/app/shared/lists/status/withoutContext/StatusListView.html
+++ b/src/main/webapp/app/shared/lists/status/withoutContext/StatusListView.html
@@ -1,9 +1,17 @@
 <section class="tatams-container">
-    <section ng-if="newMessages" ng-click="loadNewStatuses()" class="refresh-button pointer">
-        <div class="text-center refresh-button-style">
+    <section ng-click="checkForNewStatuses()" class="refresh-button pointer">
+        <div class="refresh-button-style text-center">
+            <span class="pull-left label" ng-show="newMessages == 0" ng-class="disableCheck ? 'label-default' : 'label-success'">
+                <span ng-show="!disableCheck" class="glyphicon glyphicon-refresh"></span>
+                <span ng-show="disableCheck" class="glyphicon glyphicon-ban-circle"></span>
+            </span>
             <span class="badge">{{ newMessages.length }}</span>
-            <span ng-if="newMessages.length == 1" translate="tatami.home.newMessage"></span>
-            <span ng-if="newMessages.length > 1" translate="tatami.home.newMessages"></span>
+            <span ng-show="newMessages.length == 1" translate="tatami.home.newMessage"></span>
+            <span ng-show="newMessages == 0 || newMessages.length > 1" translate="tatami.home.newMessages"></span>
+            <span class="pull-right label" ng-show="newMessages == 0" ng-class="disableCheck ? 'label-default' : 'label-success'">
+                <span ng-show="!disableCheck" class="glyphicon glyphicon-refresh"></span>
+                <span ng-show="disableCheck" class="glyphicon glyphicon-ban-circle"></span>
+            </span>
         </div>
     </section>
     <section class="timeline" infinite-scroll="loadMore()" infinite-scroll-disabled="busy">
