--- a/src/main/webapp/app/shared/lists/status/withoutContext/StatusListView.html
+++ b/src/main/webapp/app/shared/lists/status/withoutContext/StatusListView.html
@@ -1,17 +1,13 @@
 <section class="tatams-container">
     <section ng-click="checkForNewStatuses()" class="refresh-button pointer">
-        <div class="refresh-button-style text-center">
-            <span class="pull-left label" ng-show="newMessages == 0" ng-class="disableCheck ? 'label-default' : 'label-success'">
+        <div class="refresh-button-style text-center" ng-class="{ 'alert alert-success': !disableCheck }">
+            <span ng-show="newMessages == 0">
                 <span ng-show="!disableCheck" class="glyphicon glyphicon-refresh"></span>
                 <span ng-show="disableCheck" class="glyphicon glyphicon-ban-circle"></span>
             </span>
-            <span class="badge">{{ newMessages.length }}</span>
+            <span class="badge" ng-hide="newMessages == 0">{{ newMessages.length }}</span>
             <span ng-show="newMessages.length == 1" translate="tatami.home.newMessage"></span>
-            <span ng-show="newMessages == 0 || newMessages.length > 1" translate="tatami.home.newMessages"></span>
-            <span class="pull-right label" ng-show="newMessages == 0" ng-class="disableCheck ? 'label-default' : 'label-success'">
-                <span ng-show="!disableCheck" class="glyphicon glyphicon-refresh"></span>
-                <span ng-show="disableCheck" class="glyphicon glyphicon-ban-circle"></span>
-            </span>
+            <span ng-show="newMessages.length > 1" translate="tatami.home.newMessages"></span>
         </div>
     </section>
     <section class="timeline" infinite-scroll="loadMore()" infinite-scroll-disabled="busy">
