--- a/src/main/webapp/app/shared/lists/status/withContext/StatusListContextView.html
+++ b/src/main/webapp/app/shared/lists/status/withContext/StatusListContextView.html
@@ -38,8 +38,12 @@
                                 <small> · </small>
                                 <!-- Replace hover title with hover bubble -->
                                 <a ui-sref="tatami.home.status({ statusId: statusBlock.status.statusId })">
-                                    <small ng-if="!isOneDayOrMore(statusBlock.status.statusDate)" title="{{ statusBlock.status.statusDate | amDateFormat:'h:mm A - D MMM YYYY'}}" am-time-ago="statusBlock.status.statusDate"></small>
-                                    <small ng-if="isOneDayOrMore(statusBlock.status.statusDate)" title="{{ statusBlock.status.statusDate | amDateFormat:'h:mm A - D MMM YYYY'}}">{{ statusBlock.status.statusDate | amDateFormat:'MMM D'}}</small>
+                                    <!--English-->
+                                    <small ng-if="!isOneDayOrMore(statusBlock.status.statusDate) && getLanguageKey() == 'en'" title="{{ statusBlock.status.statusDate | amDateFormat:'h:mm A - D MMM YYYY' }}" am-time-ago="statusBlock.status.statusDate"></small>
+                                    <small ng-if="isOneDayOrMore(statusBlock.status.statusDate) && getLanguageKey() == 'en'" title="{{ statusBlock.status.statusDate | amDateFormat:'h:mm A - D MMM YYYY' }}">{{ statusBlock.status.statusDate | amDateFormat:'MMM D' }}</small>
+                                    <!--French-->
+                                    <small ng-if="!isOneDayOrMore(statusBlock.status.statusDate) && getLanguageKey() == 'fr'" title="{{ statusBlock.status.statusDate | amDateFormat:'HH:mm - D MMMM YYYY' }}" am-time-ago="statusBlock.status.statusDate"></small>
+                                    <small ng-if="isOneDayOrMore(statusBlock.status.statusDate) && getLanguageKey() == 'fr'" title="{{ statusBlock.status.statusDate | amDateFormat:'HH:mm - D MMMM YYYY' }}">{{ statusBlock.status.statusDate | amDateFormat:'D MMMM' }}</small>
                                 </a>
                                 <a ng-if="statusBlock.status.locationURL" class="glyphicon glyphicon-map-marker" ng-href="{{ statusBlock.status.locationURL }}" target="_blank"></a>
                             </h5>
@@ -172,8 +176,12 @@
                                     <small> · </small>
                                     <!-- Replace hover title with hover bubble -->
                                     <a ui-sref="tatami.home.status({ statusId: status.statusId })">
-                                        <small ng-if="!isOneDayOrMore(status.statusDate)" title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY'}}" am-time-ago="status.statusDate"></small>
-                                        <small ng-if="isOneDayOrMore(status.statusDate)" title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY'}}">{{ status.statusDate | amDateFormat:'MMM D'}}</small>
+                                        <!--English-->
+                                        <small ng-if="!isOneDayOrMore(status.statusDate) && getLanguageKey() == 'en'" title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY' }}" am-time-ago="status.statusDate"></small>
+                                        <small ng-if="isOneDayOrMore(status.statusDate) && getLanguageKey() == 'en'" title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY' }}">{{ status.statusDate | amDateFormat:'MMM D' }}</small>
+                                        <!--French-->
+                                        <small ng-if="!isOneDayOrMore(status.statusDate) && getLanguageKey() == 'fr'" title="{{ status.statusDate | amDateFormat:'HH:mm - D MMMM YYYY' }}" am-time-ago="status.statusDate"></small>
+                                        <small ng-if="isOneDayOrMore(status.statusDate) && getLanguageKey() == 'fr'" title="{{ status.statusDate | amDateFormat:'HH:mm - D MMMM YYYY' }}">{{ status.statusDate | amDateFormat:'D MMMM' }}</small>
                                     </a>
                                     <a ng-if="status.locationURL" class="glyphicon glyphicon-map-marker" ng-href="{{ status.locationURL }}" target="_blank"></a>
                                 </h5>
