--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -82,6 +82,8 @@
 
     <script src="/assets/bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 
+    <script src="/assets/bower_components/angular-poller/angular-poller.min.js"></script>
+
     <script src="/assets/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/assets/vendor/css/bootstrap/js/bootstrap.js"></script>
     <script src="/assets/bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js"></script>
