--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,54 +42,7 @@
     <div ui-view></div>
 
     <!--- ------------------------------------------------------------------ -->
-    <!-- AngularJS & Other Libraries -->
-    <!--- ------------------------------------------------------------------ -->
-
-    <script src="/assets/bower_components/angular/angular.min.js"></script>
-    <script src="/assets/bower_components/angular-touch/angular-touch.min.js"></script>
-
-    <script src="/assets/bower_components/angular-resource/angular-resource.min.js"></script>
-    <script src="/assets/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-
-    <script src="/assets/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-
-    <script src="/assets/bower_components/angular-translate/angular-translate.min.js"></script>
-    <script src="/assets/bower_components/angular-cookies/angular-cookies.min.js"></script>
-    <script src="/assets/bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.min.js"></script>
-
-    <script src="/assets/vendor/js/marked/marked.js"></script>
-
-    <script src="/assets/bower_components/moment/min/moment.min.js"></script>
-    <script src="/assets/bower_components/moment/locale/fr.js"></script>
-    <script src="/assets/bower_components/angular-moment/angular-moment.min.js"></script>
-
-    <script src="/assets/bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
-
-    <script src="/assets/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
-    <script src="/assets/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <!-- Minified version doesn't work -->
-    <script src="/assets/bower_components/ment.io/dist/mentio.js"></script>
-
-    <script src="/assets/bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="/assets/bower_components/ngtoast/dist/ngToast.min.js"></script>
-
-    <script src="/assets/bower_components/ng-file-upload/angular-file-upload-shim.min.js"></script>
-    <script src="/assets/bower_components/ng-file-upload/angular-file-upload.min.js"></script>
-
-    <script src="/assets/bower_components/openlayers/OpenLayers.min.js"></script>
-
-    <script src="/assets/bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
-
-    <script src="/assets/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/assets/vendor/css/bootstrap/js/bootstrap.js"></script>
-    <script src="/assets/bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js"></script>
-    <!-- Minified version causes errors in console -->
-    <script src="/assets/bower_components/angular-bootstrap-tour/dist/angular-bootstrap-tour.js"></script>
-
-    <!--- ------------------------------------------------------------------ -->
-
-    <!--- ------------------------------------------------------------------ -->
-    <!-- All Tatami files (webapp/app/**/*.js) are included in TATAMI.CONCAT.js -->
+    <!-- All dependencies added in gruntfile.js -->
     <!--- ------------------------------------------------------------------ -->
     <script src="TATAMI.CONCAT.js"></script>
     <!--- ------------------------------------------------------------------ -->
