Added version/build pop up in About

--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -35,6 +35,12 @@
                 </a>
                 <ul class="dropdown-menu closed">
                     <li>
+                        <a onclick="alert('Version: <pom>version</pom>\nBuild: <pom>version</pom>')"> 
+                            <span class="glyphicon glyphicon-info-sign"></span>
+                            <span translate="tatami.home.menu.about.version"></span>
+                        </a>
+                    </li>
+                    <li>
                         <a ui-sref="tatami.about.presentation">
                             <span class="glyphicon glyphicon-eye-open"></span>
                             <span translate="tatami.home.menu.about.presentation"></span>
