Inserts Tatami version and build hash during maven build

--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -35,7 +35,7 @@
                 </a>
                 <ul class="dropdown-menu closed">
                     <li>
-                        <a onclick="alert('Version: <pom>version</pom>\nBuild: <pom>version</pom>')"> 
+                        <a onclick="alert('Version: <pom>version</pom>\nBuild: <pom>build</pom>')"> 
                             <span class="glyphicon glyphicon-info-sign"></span>
                             <span translate="tatami.home.menu.about.version"></span>
                         </a>
