Added version and build information to a footer

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,6 +37,7 @@
     <toast></toast>
     <div ui-view="topMenu"></div>
     <div ui-view></div>
+    <div ui-view="footer"></div>
     <script src="TATAMI.CONCAT.js"></script>
 </body>
 </html>
