--- a/src/main/webapp/app/shared/footer/FooterView.html
+++ b/src/main/webapp/app/shared/footer/FooterView.html
@@ -1,3 +1,3 @@
 <div style="opacity: 0.5; text-align:center;">
-    Version: 4.0.2, Build: 823b8db
+    Version: <pom>version</pom>, Build: <pom>build</pom>
 </div>
