Added version and build information on the home page so that it is below the who to follow block

--- a/src/main/webapp/app/shared/sidebars/home/HomeSidebarView.html
+++ b/src/main/webapp/app/shared/sidebars/home/HomeSidebarView.html
@@ -109,5 +109,8 @@
                 </h6>
             </div>
         </div>
+        <div style="opacity: 0.5; text-align:center;">
+            Version: <pom>version</pom>, Build: <pom>build</pom>
+        </div>
     </section>
 </div>
