--- a/src/main/webapp/app/shared/footer/FooterView.html
+++ b/src/main/webapp/app/shared/footer/FooterView.html
@@ -1,3 +1,3 @@
-<div style="opacity: 0.5; text-align:center;">
+<div ng-if="!$state.includes('tatami.home')" style="opacity: 0.5; text-align:center;">
     Version: <pom>version</pom>, Build: <pom>build</pom>
 </div>
