Removes visible bold tags on pop ups for the Post and Help button

--- a/web/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/web/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -182,7 +182,7 @@
                 <li class="hidden-phone">
                     <button tour-step
                             order="2"
-                            title="<b>{{ 'tatami.welcome.post.title' | translate }}</b>"
+                            title="{{ 'tatami.welcome.post.title' | translate }}"
                             content="
                             {{ 'tatami.welcome.post.line1' | translate }}
                             <ul>
@@ -204,7 +204,7 @@
             <ul class="nav pull-right">
                 <li tour-step
                     order="0"
-                    title="<b>{{ 'tatami.welcome.help.title' | translate }}</b>"
+                    title="{{ 'tatami.welcome.help.title' | translate }}"
                     content="{{ 'tatami.welcome.help.line1' | translate }}
                     <br>
                     <p>{{ 'tatami.welcome.help.line2' | translate }}</p>
