Page displaying registered users

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -93,6 +93,7 @@
 	<script src="/app/components/home/welcome/WelcomeController.js"></script>
 	<script src="/app/components/admin/AdminController.js"></script>
 	<script src="/app/components/admin/AdminService.js"></script>
+	<script src="/app/components/admin/users/AdminUsersController.js"></script>
 	<script src="/app/components/account/AccountController.js"></script>
 	<script src="/app/components/account/FormController.js"></script>
 	<script src="/app/components/account/profile/ProfileModule.js"></script>
