view for login now done, needs to handle authentication still

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -20,6 +20,8 @@
 
         <!-- your app's js -->
         <script src="app/tatamiApp.js"></script>
+        <script src="app/components/login/login.js"></script>
+        <script src="app/components/login/login.controller.js"></script>
         <script src="app/components/dash/dash.js"></script>
         <script src="app/components/dash/tab.dash.controller.js"></script>
         <script src="app/components/chats/chats.js"></script>
