--- a/mobile/www/app/tabs.html
+++ b/mobile/www/app/tabs.html
@@ -6,17 +6,17 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
     <!-- Dashboard Tab -->
-    <ion-tab title="Status" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" ui-sref="tab.dash">
+    <ion-tab title="Timeline" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" ui-sref="tab.dash">
         <ion-nav-view name="tab-dash"></ion-nav-view>
     </ion-tab>
 
     <!-- Chats Tab -->
-    <ion-tab title="Chats" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" ui-sref="tab.chats">
+    <ion-tab title="Mentions" icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" ui-sref="tab.chats">
         <ion-nav-view name="tab-chats"></ion-nav-view>
     </ion-tab>
 
     <!-- Account Tab -->
-    <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" ui-sref="tab.account">
+    <ion-tab title="Favorites" icon-off="ion-android-star-outline" icon-on="ion-android-star" ui-sref="tab.account">
         <ion-nav-view name="tab-account"></ion-nav-view>
     </ion-tab>
 
