Tatmi Mobile: Update 'Account' to 'Favorites'

--- a/mobile/www/app/tabs.html
+++ b/mobile/www/app/tabs.html
@@ -16,8 +16,8 @@ navigation history that also transitions its views in and out.
     </ion-tab>
 
     <!-- Account Tab -->
-    <ion-tab title="Favorites" icon-off="ion-android-star-outline" icon-on="ion-android-star" ui-sref="tab.account">
-        <ion-nav-view name="tab-account"></ion-nav-view>
+    <ion-tab title="Favorites" icon-off="ion-android-star-outline" icon-on="ion-android-star" ui-sref="tab.favorites">
+        <ion-nav-view name="tab-favorites"></ion-nav-view>
     </ion-tab>
 
 
