Tatami Mobile: Include minified stylesheets

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
         <title></title>
 
-        <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
+        <link href="css/style.min.css" rel="stylesheet">
 
         <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
         <link href="css/ionic.app.css" rel="stylesheet">
