--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -35,10 +35,18 @@
         <!--
           The nav bar that will be updated as we navigate between views.
         -->
-        <ion-nav-bar class="bar-stable">
-            <ion-nav-back-button>
-            </ion-nav-back-button>
-        </ion-nav-bar>
+        <ion-header-bar>
+            <div class="bar bar-header bar-dark">
+                <button class="button button-clear ion-android-person-add"></button>
+                <div class="title">
+                    <img class="title-image" src="img/logo.png" />
+                    Tatami
+                </div>
+                <button class="button button-clear ion-android-create"></button>
+            </div>
+        </ion-header-bar>
+
+        <ion-nav-bar align-title="center" class="bar-subheader bar-stable"></ion-nav-bar>
         <!--
           The views will be rendered in the <ion-nav-view> directive below
           Templates are in the /templates folder (but you could also
