Working on setting up proxy for rest requests

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -14,6 +14,7 @@
 
         <!-- ionic/angularjs js -->
         <script src="lib/ionic/js/ionic.bundle.js"></script>
+        <script src="lib/ionic/js/angular/angular-resource.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
@@ -30,6 +31,8 @@
         <script src="app/components/chats/chats.detail.controller.js"></script>
         <script src="app/components/account/account.js"></script>
         <script src="app/components/account/account.controller.js"></script>
+
+        <script src="app/shared/services/ProfileService.js"></script>
     </head>
     <body ng-app="tatami">
         <!--
