--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -35,7 +35,7 @@
         <!--
           The nav bar that will be updated as we navigate between views.
         -->
-        <ion-header-bar>
+        <ion-header-bar align-title="center">
             <div class="bar bar-header bar-dark">
                 <button class="button button-clear ion-android-person-add"></button>
                 <div class="title">
