Tatami Mobile: Added Back button navigation back into header for chat forums

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -48,7 +48,9 @@
             </div>
         </ion-header-bar>
 
-        <ion-nav-bar align-title="center" class="bar-subheader bar-stable"></ion-nav-bar>
+        <ion-nav-bar align-title="center" class="bar-subheader bar-stable">
+            <ion-nav-back-button></ion-nav-back-button>
+        </ion-nav-bar>
         <!--
           The views will be rendered in the <ion-nav-view> directive below
           Templates are in the /templates folder (but you could also
