Tatami Mobile: Update 'Dash' to read 'Timeline'

--- a/mobile/www/app/tabs.html
+++ b/mobile/www/app/tabs.html
@@ -1,13 +1,8 @@
-<!--
-Create tabs with an icon and label, using the tabs-positive style.
-Each tab's child <ion-nav-view> directive will have its own
-navigation history that also transitions its views in and out.
--->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
     <!-- Dashboard Tab -->
-    <ion-tab title="Timeline" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" ui-sref="tab.dash">
-        <ion-nav-view name="tab-dash"></ion-nav-view>
+    <ion-tab title="Timeline" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" ui-sref="tab.timeline">
+        <ion-nav-view name="tab-timeline"></ion-nav-view>
     </ion-tab>
 
     <!-- Chats Tab -->
