--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -23,8 +23,8 @@
         <script src="app/tatamiApp.js"></script>
         <script src="app/components/login/login.js"></script>
         <script src="app/components/login/login.controller.js"></script>
-        <script src="app/components/dash/dash.js"></script>
-        <script src="app/components/dash/tab.dash.controller.js"></script>
+        <script src="app/components/timeline/timeline.js"></script>
+        <script src="app/components/timeline/tab.timeline.controller.js"></script>
         <script src="app/components/chats/chats.js"></script>
         <script src="app/components/chats/chats.service.js"></script>
         <script src="app/components/chats/chats.controller.js"></script>
