Tatami Mobile: Update 'Chat' to read 'Mention'

--- a/mobile/www/app/tabs.html
+++ b/mobile/www/app/tabs.html
@@ -6,8 +6,8 @@
     </ion-tab>
 
     <!-- Chats Tab -->
-    <ion-tab title="Mentions" icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" ui-sref="tab.chats">
-        <ion-nav-view name="tab-chats"></ion-nav-view>
+    <ion-tab title="Mentions" icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" ui-sref="tab.mentions">
+        <ion-nav-view name="tab-mentions"></ion-nav-view>
     </ion-tab>
 
     <!-- Account Tab -->
