--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -24,7 +24,9 @@
         <script src="app/components/login/login.js"></script>
         <script src="app/components/login/login.controller.js"></script>
         <script src="app/components/timeline/timeline.js"></script>
+        <script src="app/components/timeline/timeline.service.js"></script>
         <script src="app/components/timeline/tab.timeline.controller.js"></script>
+        <script src="app/components/timeline/timeline.detail.controller.js"></script>
         <script src="app/components/mentions/mentions.js"></script>
         <script src="app/components/mentions/mentions.service.js"></script>
         <script src="app/components/mentions/mentions.controller.js"></script>
