--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -33,7 +33,9 @@
         <script src="app/components/mentions/mentions.detail.controller.js"></script>
         <script src="app/shared/services/ProfileService.js"></script>
         <script src="app/components/favorites/favorites.js"></script>
+        <script src="app/components/favorites/favorites.service.js"></script>
         <script src="app/components/favorites/favorites.controller.js"></script>
+        <script src="app/components/favorites/favorites.detail.controller.js"></script>
     </head>
     <body ng-app="tatami">
         <!--
