--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -36,6 +36,8 @@
         <script src="app/components/favorites/favorites.service.js"></script>
         <script src="app/components/favorites/favorites.controller.js"></script>
         <script src="app/components/favorites/favorites.detail.controller.js"></script>
+        <script src="app/components/follow/follow.js"></script>
+        <script src="app/components/post/post.js"></script>
     </head>
     <body ng-app="tatami">
         <!--
@@ -43,12 +45,20 @@
         -->
         <ion-header-bar align-title="center">
             <div class="bar bar-header bar-dark">
-                <button class="button button-clear ion-android-person-add"></button>
+                <div class="buttons">
+                    <a ui-sref="follow">
+                        <button class="button button-clear ion-android-person-add"></button>
+                    </a>
+                </div>
                 <div class="title">
                     <img class="title-image" src="img/logo.png" />
                     Tatami
                 </div>
-                <button class="button button-clear ion-android-create"></button>
+                <div class="buttons">
+                    <a ui-sref="post">
+                        <button class="button button-clear ion-android-create"></button>
+                    </a>
+                </div>
             </div>
         </ion-header-bar>
 
