Tatami Mobile: Added link to logo to go back to 'home' which is set to timeline

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -51,8 +51,10 @@
                     </a>
                 </div>
                 <div class="title">
-                    <img class="title-image" src="img/logo.png" />
-                    Tatami
+                    <a ui-sref="tab.timeline">
+                        <img class="title-image" src="img/logo.png" />
+                        Tatami
+                    </a>
                 </div>
                 <div class="buttons">
                     <a ui-sref="post">
