Added StatusService to tatami.services

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -38,6 +38,9 @@
         <script src="app/components/favorites/favorites.detail.controller.js"></script>
         <script src="app/components/follow/follow.js"></script>
         <script src="app/components/post/post.js"></script>
+        <script src="app/components/post/post.controller.js"></script>
+        <script src="app/shared/services/StatusService.js"></script>
+        <!--<script src="../../web/src/main/webapp/app/shared/services/ProfileService.js"></script>-->
     </head>
     <body ng-app="tatami">
         <!--
