--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -37,6 +37,12 @@
         <script src="app/components/favorites/favorites.controller.js"></script>
         <script src="app/components/favorites/favorites.detail.controller.js"></script>
         <script src="app/components/follow/follow.js"></script>
+        <script src="app/components/follow/suggested/suggested.js"></script>
+        <script src="app/components/follow/suggested/suggested.controller.js"></script>
+        <script src="app/components/follow/follower/follower.js"></script>
+        <script src="app/components/follow/follower/follower.controller.js"></script>
+        <script src="app/components/follow/following/following.js"></script>
+        <script src="app/components/follow/following/following.controller.js"></script>
         <script src="app/components/post/post.js"></script>
         <script src="app/components/post/post.controller.js"></script>
         <script src="app/shared/services/StatusService.js"></script>
@@ -48,13 +54,15 @@
         <ion-header-bar align-title="center">
             <div class="bar bar-header bar-dark">
                 <div class="buttons">
-                    <a ui-sref="follow">
+                    <a ui-sref="follow.suggested">
                         <button class="button button-clear ion-android-person-add"></button>
                     </a>
                 </div>
                 <div class="title">
-                    <img class="title-image" src="img/logo.png" />
-                    Tatami
+                    <a style="text-decoration: none;" ui-sref="tab.timeline">
+                        <img class="title-image" src="img/logo.png" />
+                        Tatami
+                    </a>
                 </div>
                 <div class="buttons">
                     <a ui-sref="post">
@@ -67,11 +75,7 @@
         <ion-nav-bar align-title="center" class="bar-subheader bar-stable">
             <ion-nav-back-button></ion-nav-back-button>
         </ion-nav-bar>
-        <!--
-          The views will be rendered in the <ion-nav-view> directive below
-          Templates are in the /templates folder (but you could also
-          have templates inline in this html file if you'd like).
-        -->
+
         <ion-nav-view></ion-nav-view>
     </body>
 </html>
