--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -44,6 +44,7 @@
         <script src="app/components/follow/follower/follower.controller.js"></script>
         <script src="app/components/follow/following/following.js"></script>
         <script src="app/components/follow/following/following.controller.js"></script>
+        <script src="app/shared/user/user.directive.js"></script>
         <script src="app/components/post/post.js"></script>
         <script src="app/components/post/post.controller.js"></script>
         <script src="app/shared/services/StatusService.js"></script>
